--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="wrapper">
-            {% include base/base-menu.html %}
+            {% include base/track-menu.html %}
 
             {{ content }}
 
