--- a/_layouts/track-index.html
+++ b/_layouts/track-index.html
@@ -64,9 +64,7 @@
                             {% endfor %}
                     </div>
             </div>
-            {% include plugins/video-callout.html image="/uploads/track/track-video.jpg"
-                text="Go with AIA Track & Field " byLine="Check out highlights from recent tours."
-                video="https://www.youtube.com/watch?v=Tb63HOgfEtc" %}
+            {% include plugins/video-callout.html image="/uploads/track/track-video.jpg" text="Go with AIA Track & Field " byLine="Check out highlights from recent tours." video="https://www.youtube.com/watch?v=Tb63HOgfEtc" %}
             
             <div class="row">
                 <div id="opportunities">
