SP Website Framework

--- a/_includes/base/sports-performance-menu.html
+++ b/_includes/base/sports-performance-menu.html
@@ -37,12 +37,13 @@
 
                 <div class="collapse navbar-collapse" id="main-navbar-container">
                     <ul class="nav navbar-nav">
-                        <li class=""><a href="#">Home</a></li>
-                        <li class=""><a href="#about">About</a></li>
-                        <li class=""><a href="#tours">Tours</a></li>
-                        <li class=""><a href="#opportunities">Opportunities</a></li>
-                        <li class=""><a href="#apply">Apply</a></li>
-                        <li class=""><a href="http://give.cru.org/2281852">Give</a></li>
+                        <li class=""><a href="/">Home</a></li>
+                        <li class=""><a href="/about">About</a></li>
+                        <li class=""><a href="/get-involved">Get Involved</a></li>
+                        <li class=""><a href="/resources">Training Table</a></li>
+                        <li class=""><a href="/alumni">Alumni</a></li>
+                        <li class=""><a href="/give">Give</a></li>
+                        <li class=""><a href="https://goaia.org/opportunity/blog/sports-performance/blog/">Blogs</a></li>
                     </ul>
                     
                     <button type="button" class="navbar-btn btn-icon btn-circle navbar-right last  hidden-sm hidden-xs" data-toggle="collapse" data-target="#header-search-form"><i class="fa fa-search"></i></button>
