--- a/_layouts/full-page-slider.html
+++ b/_layouts/full-page-slider.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        {% include base/base-menu.html %}
+        {% include base/sports-performance-menu.html %}
         {% capture sImage %}{{ page.sliderImage }}{% endcapture %}
         {% capture sText %}{{ page.sliderText }}{% endcapture %}
         {% include plugins/revslider.html src1=sImage text1=sText %}
