--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="wrapper">
-            {% include base/base-menu.html color="navbar-inverse" %}
+            {% include base/sports-performance-menu.html %}
 
             {% include plugins/revslider.html src1="/uploads/vball.jpg" text1="Go With AIA" src2="/uploads/CircleUp.jpg" text2="Go With AIA" src3="/uploads/xproject.jpg" text3="Go With AIA" %}
       
