--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        {% include base/base-menu.html %}
+        {% include base/sports-performance-menu.html %}
 
         {{ content }}
         {% include base/footer.html %}        
