--- a/_includes/base/footer.html
+++ b/_includes/base/footer.html
@@ -91,4 +91,5 @@
 
 <script>(function(d){d.className="dyn"+d.className.substring(6,d.className.length);})(document.documentElement);</script> 
 <script>window.isRTL = false;</script>
+<!--<script type="text/javascript">_satellite.pageBottom();</script>-->
 
