--- a/_layouts/blocks.html
+++ b/_layouts/blocks.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
-
-<html>
-    <head>
-
-        {% include base/head.html %}
-
-    </head>
-    <body>
-        {% include base/sports-performance-menu.html %}
-        {% for section in page.page_sections %}
-        {% include block-{{ section.block }}.html %}
-        {% endfor %}
-        {% include base/footer.html %}        
-        <script src="/js/main.js" type="text/javascript"></script>
-    </body>
-</html>
+---
+layout: default
+---
+<div class="max-width">
+    <div class="page-header no-margin dark larger">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>{{ page.title }}</h1>
+                </div>
+                <!-- End .col-md-6 
+                <div class="col-md-6">
+                    <ol class="breadcrumb">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/pro">Pro</a></li>
+                    </ol>
+                </div> -->
+            </div>
+        </div>
+    </div>
+    <div class="max-width">
+        <div class="container mt20">
+            {% for section in page.page_sections %}
+            {% include blocks/block-{{ section.block }}.html %}
+            {% endfor %}    
+        </div>
+    </div>
+</div> 
