[skip ci] new blocks

--- a/_includes/blocks/block-application-callout.html
+++ b/_includes/blocks/block-application-callout.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="max-width mt20">
-        <div class="mt20 callout no-border larger no-margin {{ include.color | default: light }}">
+        <div class="mt20 callout no-border larger no-margin {{ section.color | default: light }}">
             <div class="container">
                 <div class="callout-wrapper">
                     <div class="callout-left">
