--- a/_includes/blocks/block-projects.html
+++ b/_includes/blocks/block-projects.html
@@ -1,3 +1,7 @@
+<div class="container">
+<div class="row mt30">
+<h2 class="title text-center mb30">Get <span class="light first-color">Involved</span></h2>
+</div>
 <div class="row">
 <div class="col-sm-4">
 <a href="/get-involved/students">
@@ -39,4 +43,5 @@
 
 </div><!-- End .service -->
 </a></div><!-- End .col-sm-4 -->
+</div>
 </div>
