--- a/_layouts/home-blocks.html
+++ b/_layouts/home-blocks.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: index
 ---
 {% for section in page.page_sections %}
 {% include blocks/block-{{ section.block }}.html %}
