--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,98 +8,7 @@
     </head>
     <body>
         <div id="wrapper">
-            {% include base/sports-performance-menu.html %}
-
-            {% include plugins/revslider.html src1="/uploads/vball.jpg" text1="Go With AIA" src2="/uploads/CircleUp.jpg" text2="Go With AIA" src3="/uploads/xproject.jpg" text3="Go With AIA" %}
-      
-            <div class="row">
-                <div class=" span-12 cell">
-                    <div class="container-fluid no-padding" id="id-to-scroll">
-                            <div class="row no-margin">
-                                <div class="col-sm-4 bg-light">
-                                    <div class="colored-box" style="text-align: center;">
-                                        <h3 class="text-dark mb20" style="text-align: center;">Campus Finder</h3>
-                                        <p class="text-dark" style="text-align: center;"><span>Athletes in Action has a ministry presence on campuses throughout the nation. Search our campus finder to find one near you!</span></p>
-                                        <a href="/campus/find" class="btn btn-custom v2 btn-border no-radius">Learn More</a>
-                                    </div><!-- End .colored-box -->
-                                </div><!-- End .col-sm-4 -->
-                                <div class="col-sm-4 col-md-push-4 bg-light">
-                                    <div class="colored-box" style="text-align: center;">
-                                        <h3 class="text-dark mb20">Careers</h3>
-                                        <p class="text-dark"><span>Check out our resources page to find various ministry resources to help you grow and help others grow in Christ.</span></p>
-                                        <a href="/careers" class="btn btn-custom v2 btn-border no-radius">Learn More</a>
-                                    </div><!-- End .colored-box -->
-                                </div><!-- End .col-sm-4 -->
-                                <div class="col-sm-4 col-md-pull-4 bg-light" style="text-align: center;">
-                                    <div class="colored-box">
-                                        <h3 class="text-dark mb20">Opportunities</h3>
-                                        <p class="text-dark"><span>Go with Athletes in Action on one of our many different opportunities. Click the box to see where we are going this year! </span></p>
-                                        <a id="cl1" data-toggle="collapse" data-parent="#accordion" href="#cpb1" aria-expanded="false" aria-controls="cpb1" class="collapsed btn btn-custom v2 btn-border no-radius">Learn More</a>
-                                    </div><!-- End .colored-box -->
-                                </div><!-- End .col-sm-4 -->
-                            </div><!-- End .row -->
-                        </div>
-                        <div class="container">
-                            <div class="row">
-                            <div id="cpb1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="cl1" aria-expanded="false">
-                            <div class="panel-body">
-                            <div class="row">
-                            <div class="col-sm-3"><a href="#" class="megamenu-title">Sports Teams</a>
-                            <ul>
-                            <li><a href="http://aiabaseball.org" target="_new">Baseball</a></li>
-                            <li><a href="/basketball">Basketball</a></li>
-                            <li><a href="/football">Football</a></li>
-                            <li><a href="/golf">Golf</a></li>
-                            <li><a href="/soccer">Soccer</a></li>
-                            <li><a href="/softball">Softball</a></li>
-                            <li><a href="http://aiasportsperformance.org" target="_new">Sports Performance</a></li>
-                            <li><a href="/tennis">Tennis</a></li>
-                            <li><a href="/track">Track</a></li>
-                            <li><a href="/volleyball">Volleyball</a></li>
-                            <li><a href="/wrestling">Wrestling</a></li>
-                            </ul>
-                            </div>
-                            <!-- End .col-sm-3 -->
-                            <div class="col-sm-3"><a href="#" class="megamenu-title">Projects</a>
-                            <ul>
-                            <li><a href="/opportunity/boston-project">Boston Project</a></li>
-                            <li><a href="/opportunity/east-asia-project">East Asia Project</a></li>
-                            <li><a href="http://www.puertoricoproject.com/" target="_new"> Puerto Rico Project</a></li>
-                            <li><a href="/opportunity/south-africa-project">South Africa Project</a></li>
-                            <li><a href="http://www.urbanprojectinternational.com/" target="_blank">Urban Project LA</a></li>
-                            <li><a href="/opportunity/x-project">X Project</a></li>
-                            </ul>
-                            </div>
-                            <!-- End .col-sm-3 -->
-                            <div class="col-sm-3"><a href="#" class="megamenu-title">Camps &amp; Retreats</a>
-                            <ul>
-                            <li><a href="http://ultimatetrainingcamp.com" target="_blank">UTC - Ultimate Training Camp</a></li>
-                            <li><a href="/opportunity/springbreak">Spring Break</a></li>
-                            <li><a href="/opportunity/winterretreat">Winter Retreats</a></li>
-                            </ul>
-                            </div>
-                            <!-- End .col-sm-3 -->
-                            <div class="col-sm-3"><a href="#" class="megamenu-title">Event Series</a>
-                            <ul>
-                            <li><a href="http://superbowlbreakfast.com" target="_blank">Super Bowl Breakfast</a></li>
-                            <li><a href="http://allstarbreakfast.com" target="_blank">All Star Breakfast</a></li>
-                            <li><a href="/events/legends" target="_blank">Legends Breakfast</a></li>
-                            <li><a href="http://aianightofchampions.com" target="_blank">Night of Champions</a></li>
-                            </ul>
-                            </div>
-                            <!-- End .col-sm-3 --></div>
-                            </div>
-                            <!-- End .container-fluid --></div>
-                            </div>
-                            </div>
-                </div>
-            </div>
-            
-            {% include plugins/video-callout.html image="/uploads/mo-team.jpg" text="An Experience of a Lifetime!" byLine="Check out this video recap created by a recent AIA opportunity participant to the Philippines" video="https://www.youtube.com/watch?v=evqlr_0AIzc" %}
-            
-            {% include plugins/aia-social.html %}
-
-            {% include base/footer.html %}
+            {{ content }}
             <script src="/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
             <script src="/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
             <script type="text/javascript">
