--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <div id="wrapper">
+            {% include base/sports-performance-menu.html %}
+
             {{ content }}
+
+            {% include base/footer.html %}
             <script src="/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
             <script src="/js/jquery.themepunch.revolution.min.js" type="text/javascript"></script>
             <script type="text/javascript">
