--- a/_includes/blocks/block-news.html
+++ b/_includes/blocks/block-news.html
@@ -1,13 +1,20 @@
 {% capture title1 %}{{site.posts[0].title}}{% endcapture %}
 {% capture image1 %}{{site.posts[0].image}}{% endcapture %}
+{% capture link1 %}{{site.posts[0].url}}{% endcapture %}
 {% capture title2 %}{{site.posts[1].title}}{% endcapture %}
 {% capture image2 %}{{site.posts[1].image}}{% endcapture %}
+{% capture link2 %}{{site.posts[1].url}}{% endcapture %}
 {% capture title3 %}{{site.posts[2].title}}{% endcapture %}
 {% capture image3 %}{{site.posts[2].image}}{% endcapture %}
+{% capture link3 %}{{site.posts[2].url}}{% endcapture %}
 {% include plugins/revslider.html 
             src1=image1 
             text1=title1
+            url1=link1
             src2=image2 
             text2=title2
+            url2=link2
             src3=image3 
-            text3=title3 %}
+            text3=title3
+            url3=link3
+            %}
