--- a/_includes/plugins/revslider.html
+++ b/_includes/plugins/revslider.html
@@ -10,8 +10,20 @@
                             data-start="1000"
                             data-easing="Power3.easeInOut"
                             data-endspeed="600"
-                            style="z-index: 6">{{ include.text1 }}
+                            style="z-index: 6; width: 90%; white-space: normal; text-align: center; font-size: 50px;">{{ include.text1 }}
                         </div>
+
+                        <div class="tp-caption rev-btn lfb ltt"
+                                data-x="center"
+                                data-y="360"
+                                data-speed="1000"
+                                data-start="1400"
+                                data-easing="Power3.easeInOut"
+                                data-endspeed="800"
+                                style="z-index: 14">
+                                <a href="{{ include.url1 }}" class="btn btn-white radius-lger min-width"><strong>Read the Post</strong></a>
+                                <a href="/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
+                            </div>
 
 
                         <div class="tp-caption rev-text lfb ltt"
@@ -38,6 +50,17 @@
                             style="z-index: 6">{{ include.text2 }}
                         </div>
 
+                        <div class="tp-caption rev-btn lfb ltt"
+                                data-x="center"
+                                data-y="360"
+                                data-speed="1000"
+                                data-start="1400"
+                                data-easing="Power3.easeInOut"
+                                data-endspeed="800"
+                                style="z-index: 14">
+                                <a href="{{ include.url2 }}" class="btn btn-white radius-lger min-width"><strong>Read the Post</strong></a>
+                                <a href="/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
+                            </div>
 
                         <div class="tp-caption rev-text lfb ltt"
                             data-x="center"
@@ -63,6 +86,18 @@
                             data-endspeed="600"
                             style="z-index: 6">{{ include.text3 }}
                         </div>
+
+                        <div class="tp-caption rev-btn lfb ltt"
+                                data-x="center"
+                                data-y="360"
+                                data-speed="1000"
+                                data-start="1400"
+                                data-easing="Power3.easeInOut"
+                                data-endspeed="800"
+                                style="z-index: 14">
+                                <a href="{{ include.url3 }}" class="btn btn-white radius-lger min-width"><strong>Read the Post</strong></a>
+                                <a href="/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
+                            </div>
 
 
                         <div class="tp-caption rev-text lfb ltt"
