--- a/_includes/plugins/revslider.html
+++ b/_includes/plugins/revslider.html
@@ -3,6 +3,16 @@
             <ul>
                 <li data-transition="fade" data-slotamount="8" data-masterspeed="800" data-title="{{ include.text1 }}" data-thumb="{{ include.src1 }}">
                         <img src="{{ include.src1 }}"  alt="slidebg1" data-lazyload="{{ include.src1 }}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+                        <div class="tp-caption rev-subtitle lfb ltt"
+                            data-x="center"
+                            data-y="165"
+                            data-speed="1000"
+                            data-start="900"
+                            data-easing="Power3.easeInOut"
+                            data-endspeed="400"
+                            style="z-index: 10">Athletes In Action Sports Performance
+                        </div>
+
                         <div class="tp-caption rev-title lfb ltt"
                             data-x="center"
                             data-y="210"
@@ -40,6 +50,15 @@
                 {% if include.src2 %}
                  <li data-transition="fade" data-slotamount="8" data-masterspeed="800" data-title="{{ include.text2}}" data-thumb="{{ include.src2 }}">
                         <img src="{{ include.src2 }}"  alt="slidebg1" data-lazyload="{{ include.src2 }}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+                        <div class="tp-caption rev-subtitle lfb ltt"
+                            data-x="center"
+                            data-y="165"
+                            data-speed="1000"
+                            data-start="900"
+                            data-easing="Power3.easeInOut"
+                            data-endspeed="400"
+                            style="z-index: 10">Athletes In Action Sports Performance
+                        </div>
                         <div class="tp-caption rev-title lfb ltt"
                             data-x="center"
                             data-y="210"
@@ -77,6 +96,15 @@
                 {% if include.src3 %}
                     <li data-transition="fade" data-slotamount="8" data-masterspeed="800" data-title="{{ include.text3 }}" data-thumb="{{ include.src3 }}">
                         <img src="{{ include.src3 }}"  alt="slidebg1" data-lazyload="{{ include.src3 }}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
+                        <div class="tp-caption rev-subtitle lfb ltt"
+                            data-x="center"
+                            data-y="165"
+                            data-speed="1000"
+                            data-start="900"
+                            data-easing="Power3.easeInOut"
+                            data-endspeed="400"
+                            style="z-index: 10">Athletes In Action Sports Performance
+                        </div>
                         <div class="tp-caption rev-title lfb ltt"
                             data-x="center"
                             data-y="210"
@@ -115,7 +143,16 @@
                {% if include.src4 %}
                <li data-transition="fade" data-slotamount="8" data-masterspeed="800" data-title="{{ include.text4}}" data-thumb="{{ include.src4 }}">
                       <img src="{{ include.src4 }}"  alt="slidebg1" data-lazyload="{{ include.src4 }}" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
-                      <div class="tp-caption rev-title lfb ltt"
+                      <div class="tp-caption rev-subtitle lfb ltt"
+                            data-x="center"
+                            data-y="165"
+                            data-speed="1000"
+                            data-start="900"
+                            data-easing="Power3.easeInOut"
+                            data-endspeed="400"
+                            style="z-index: 10">Athletes In Action Sports Performance
+                        </div>
+                        <div class="tp-caption rev-title lfb ltt"
                           data-x="center"
                           data-y="210"
                           data-speed="1000"
