--- a/_includes/blocks/block-projects.html
+++ b/_includes/blocks/block-projects.html
@@ -4,44 +4,41 @@
 </div>
 <div class="row">
 <div class="col-sm-4">
-<a href="/get-involved/students">
-<div class="service vertical service-hover-bg custom text-center service-box">
-
+<div class="service vertical service-hover-bg dark text-center service-box">
 <div class="service-content">
 <h3 class="service-title title-underblock custom text-uppercase text-center">Students</h3>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ipsam soluta optio natus ducimus est in, enim, quam obcaecati quia commodi hic incidunt.</p>
+<p>Explore a different aspect of athletic training or strength & conditioning. Our Internships and short-term opportunities will challenge you to develop as a leader while you gain valuable experience. </p>
+<p>&nbsp;</p>
+<a href="/get-involved/students" class="btn btn-custom btn-border no-radius">Learn More</a>
 </div><!-- End .service-content -->
-
 </div><!-- End .service -->
-</a>
 </div><!-- End .col-sm-4 -->
 
 <div class="col-sm-4">
-<a href="/get-involved/professionals">
-<div class="service vertical service-hover-bg  custom2 text-center service-box">
+<div class="service vertical service-hover-bg  dark text-center service-box">
 
 
 <div class="service-content">
 <h3 class="service-title title-underblock custom text-uppercase text-center">Professionals</h3>
-
-<p>Harum repellat quaerat accusantium fuga aliquam dolorum, tempora recusandae minus quibusdam laborum dolor emque susc ipit nisi excepturi, sit..</p>
+<p>Experience missions in your field of expertise. Our clinic and competitive mission teams and camps need athletic trainers and strength coaches. International and domestic life changing opportunities exist.</p>
+<p>&nbsp;</p>
+<a href="/get-involved/professionals" class="btn btn-custom btn-border no-radius">Learn More</a>
 </div><!-- End .service-content -->
 
 </div><!-- End .service -->
-</a></div><!-- End .col-sm-4 -->
+</div><!-- End .col-sm-4 -->
 
 <div class="col-sm-4">
-<a href="/get-involved/staff">
 <div class="service vertical service-hover-bg  dark text-center service-box">
 
 <div class="service-content">
 <h3 class="service-title title-underblock custom text-uppercase text-center">Staff</h3>
-
-<p>Reiciendis, ad a fugit quas! Ratione praesentium alias pariatur repellat voluptates, nemo quos officia! Similique itaque odio laudantium delectus.</p>
+<p>Looking for a place where you can help change the world while working in your field? Join our team and watch God change lives. The one he changes might just be yours!</p>
+<p>&nbsp;</p>
+<a href="/get-involved/staff" class="btn btn-custom btn-border no-radius">Learn More</a>
 </div><!-- End .service-content -->
 
 </div><!-- End .service -->
-</a></div><!-- End .col-sm-4 -->
+</div><!-- End .col-sm-4 -->
 </div>
 </div>
