--- a/_includes/base/sports-performance-menu.html
+++ b/_includes/base/sports-performance-menu.html
@@ -43,7 +43,7 @@
                         <li class=""><a href="/resources">Training Table</a></li>
                         <li class=""><a href="/alumni">Alumni</a></li>
                         <li class=""><a href="/give">Give</a></li>
-                        <li class=""><a href="https://goaia.org/opportunity/blog/sports-performance/blog/">Blogs</a></li>
+                        <li class=""><a href="/news/">News</a></li>
                     </ul>
                     
                     <button type="button" class="navbar-btn btn-icon btn-circle navbar-right last  hidden-sm hidden-xs" data-toggle="collapse" data-target="#header-search-form"><i class="fa fa-search"></i></button>
