--- a/_layouts/blog-page.html
+++ b/_layouts/blog-page.html
@@ -7,13 +7,11 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    {% assign this_collection = page.collection %}
-                    {% assign collection = site.collections | where: "label", this_collection | first %}
-                    <h1><a style="color: #bebebe;" href="{{collection.permalink | remove: ":collection/:year/:path" | append: collection.label }}" >{{collection.title }} Blog</a></h1>
+                    <h1><a style="color: #bebebe;" href="{{collection.permalink | remove: ":collection/:year/:path" | append: collection.label }}" >Sports Performance News</a></h1>
                 </div>
                 <div class="col-md-6">
                     <ol class="breadcrumb">
-                        <li><a href="/opportunity/blog/">Team Blogs</a></li>
+                        <li><a href="/news/">News</a></li>
                     </ol>
                 </div>
             </div>
@@ -29,7 +27,7 @@ layout: default
                     <div class="widget">
                         <h3>Recent Posts</h3>
                         <ul class="links">
-                        {% assign posts = collection.docs | reverse %}
+                        {% assign posts = site.posts | reverse %}
                             {% for post in posts limit: 5 %}
                             {% if post.url contains "index" %}
                             {% else %}
