--- a/_includes/base/sports-performance-menu.html
+++ b/_includes/base/sports-performance-menu.html
@@ -40,7 +40,7 @@
                         <li class=""><a href="/">Home</a></li>
                         <li class=""><a href="/about">About</a></li>
                         <li class=""><a href="/get-involved/">Get Involved</a></li>
-                        <li class=""><a href="/resources">Training Table</a></li>
+                        <li class=""><a href="/resources/">Training Table</a></li>
                         <li class=""><a href="/alumni">Alumni</a></li>
                         <li class=""><a href="/give">Give</a></li>
                         <li class=""><a href="/news/">News</a></li>
