social media data file

--- a/_includes/blocks/block-sports-performance-social.html
+++ b/_includes/blocks/block-sports-performance-social.html
@@ -11,12 +11,11 @@
             <!-- space -->
                 <div class="row mt" style="text-align: center;">
                     <div class="social-icons social-icons-bg social-icons-bg-hover social-icons-lg social-icons-circle">
-                        <a href="https://www.facebook.com/AthletesinAction" class="social-icon icon-facebook" title="Facebook"> <i class="fa fa-facebook"></i> </a> 
-                        <a href="http://www.twitter.com/aiausa" class="social-icon icon-twitter" title="Twitter"> <i class="fa fa-twitter"></i> </a> 
-                        <a href="https://plus.google.com/+athletesinaction/posts" class="social-icon icon-google-plus" title="Google Plus"> <i class="fa fa-google-plus"></i> </a>
-                        <a href="https://www.instagram.com/athletesinaction/" class="social-icon icon-instagram" title="Instagram"> <i class="fa fa-instagram"></i> </a> 
-                        <a href="https://www.youtube.com/user/aiausa" class="social-icon icon-youtube" title="YouTube"> <i class="fa fa-youtube"></i> </a>
-                        <a href="mailto:info@athletesinaction.org" class="social-icon icon-mail" title="Email" target="_blank"> <i class="fa fa-envelope"></i> </a>
+                        <a href="{{ site.data.socialmedia[1].link }}" class="social-icon icon-facebook" title="Facebook"> <i class="fa fa-facebook"></i> </a> 
+                        <a href="{{ site.data.socialmedia[0].link }}" class="social-icon icon-twitter" title="Twitter"> <i class="fa fa-twitter"></i> </a> 
+                        <a href="{{ site.data.socialmedia[2].link }}" class="social-icon icon-instagram" title="Instagram"> <i class="fa fa-instagram"></i> </a> 
+                        <a href="{{ site.data.socialmedia[4].link }}" class="social-icon icon-youtube" title="YouTube"> <i class="fa fa-youtube"></i> </a>
+                        <a href="mailto:{{ site.data.socialmedia[3].link }}" class="social-icon icon-mail" title="Email" target="_blank"> <i class="fa fa-envelope"></i> </a>
                     </div>
                 </div><!-- End .social-icons -->
             </div><!-- End .col-md-8 -->
