--- a/_includes/blocks/block-projects.html
+++ b/_includes/blocks/block-projects.html
@@ -7,7 +7,7 @@
 <div class="service vertical service-hover-bg dark text-center service-box">
 <div class="service-content">
 <h3 class="service-title title-underblock custom text-uppercase text-center">Students</h3>
-<p>Explore a different aspect of athletic training or strength & conditioning. Our Internships and short-term opportunities will challenge you to develop as a leader while you gain valuable experience. </p>
+<p>{{ site.data.site-wide-text[0].text }}</p>
 <p>&nbsp;</p>
 <a href="/get-involved/students" class="btn btn-custom btn-border no-radius">Learn More</a>
 </div><!-- End .service-content -->
@@ -20,7 +20,7 @@
 
 <div class="service-content">
 <h3 class="service-title title-underblock custom text-uppercase text-center">Professionals</h3>
-<p>Experience missions in your field of expertise. Our clinic and competitive mission teams and camps need athletic trainers and strength coaches. International and domestic life changing opportunities exist.</p>
+<p>{{ site.data.site-wide-text[1].text }}</p>
 <p>&nbsp;</p>
 <a href="/get-involved/professionals" class="btn btn-custom btn-border no-radius">Learn More</a>
 </div><!-- End .service-content -->
@@ -33,7 +33,7 @@
 
 <div class="service-content">
 <h3 class="service-title title-underblock custom text-uppercase text-center">Staff</h3>
-<p>Looking for a place where you can help change the world while working in your field? Join our team and watch God change lives. The one he changes might just be yours!</p>
+<p>{{ site.data.site-wide-text[2].text }}</p>
 <p>&nbsp;</p>
 <a href="/get-involved/staff" class="btn btn-custom btn-border no-radius">Learn More</a>
 </div><!-- End .service-content -->
