--- a/_includes/blocks/block-projects.html
+++ b/_includes/blocks/block-projects.html
@@ -6,7 +6,7 @@
 <div class="col-sm-4">
 <div class="service vertical service-hover-bg dark text-center service-box">
 <div class="service-content">
-<h3 class="service-title title-underblock custom text-uppercase text-center">Students</h3>
+<h3 class="service-title title-underblock custom text-uppercase text-center">{{ site.data.site-wide-text[0].name }}</h3>
 <p>{{ site.data.site-wide-text[0].text }}</p>
 <p>&nbsp;</p>
 <a href="/get-involved/students" class="btn btn-custom btn-border no-radius">Learn More</a>
@@ -19,7 +19,7 @@
 
 
 <div class="service-content">
-<h3 class="service-title title-underblock custom text-uppercase text-center">Professionals</h3>
+<h3 class="service-title title-underblock custom text-uppercase text-center">{{ site.data.site-wide-text[1].name }}</h3>
 <p>{{ site.data.site-wide-text[1].text }}</p>
 <p>&nbsp;</p>
 <a href="/get-involved/professionals" class="btn btn-custom btn-border no-radius">Learn More</a>
@@ -32,7 +32,7 @@
 <div class="service vertical service-hover-bg  dark text-center service-box">
 
 <div class="service-content">
-<h3 class="service-title title-underblock custom text-uppercase text-center">Staff</h3>
+<h3 class="service-title title-underblock custom text-uppercase text-center">{{ site.data.site-wide-text[2].name }}</h3>
 <p>{{ site.data.site-wide-text[2].text }}</p>
 <p>&nbsp;</p>
 <a href="/get-involved/staff" class="btn btn-custom btn-border no-radius">Learn More</a>
