--- a/_includes/blocks/block-text-with-right-image.html
+++ b/_includes/blocks/block-text-with-right-image.html
@@ -1,5 +1,5 @@
 <div class="max-width">
     <div class="container mt20">
-        <img class="col-md-4 pull-right" src="{{ section.image }}" />{{ section.content }}
+        <img class="col-md-4 pull-right" src="{{ section.image }}" />{{ section.text }}
     </div>
 </div>
