--- a/_includes/blocks/block-resources.html
+++ b/_includes/blocks/block-resources.html
@@ -6,10 +6,10 @@
 </div>
 <div class="row">
 {% endif %}
-{% assign options = site.resources | where: "primary", "true" %}
+{% assign options = site.resources | sort: 'order' | where: "primary", "true" %}
 {% for r in options %}
 <div class="col-sm-4">
-<div class="service vertical text-center service-box">
+<div class="service vertical text-center service-box" style="min-height: 400px;">
 <div class="service-content">
 <!--<h3 class="service-title title-underblock custom text-uppercase text-center">Students</h3>-->
 <img src="{{r.featured_image}}" width="100%">
