--- a/_includes/plugins/revslider.html
+++ b/_includes/plugins/revslider.html
@@ -66,7 +66,7 @@
                             data-start="1000"
                             data-easing="Power3.easeInOut"
                             data-endspeed="600"
-                            style="z-index: 6">{{ include.text2 }}
+                            style="z-index: 6; width: 90%; white-space: normal; text-align: center; font-size: 50px;">{{ include.text2 }}
                         </div>
 
                         <div class="tp-caption rev-btn lfb ltt"
@@ -112,7 +112,7 @@
                             data-start="1000"
                             data-easing="Power3.easeInOut"
                             data-endspeed="600"
-                            style="z-index: 6">{{ include.text3 }}
+                            style="z-index: 6; width: 90%; white-space: normal; text-align: center; font-size: 50px;">{{ include.text3 }}
                         </div>
 
                         <div class="tp-caption rev-btn lfb ltt"
@@ -159,7 +159,7 @@
                           data-start="1000"
                           data-easing="Power3.easeInOut"
                           data-endspeed="600"
-                          style="z-index: 6">{{ include.text4 }}
+                          style="z-index: 6; width: 90%; white-space: normal; text-align: center; font-size: 50px;">{{ include.text4 }}
                       </div>
 
 
