--- a/_includes/blocks/block-application-callout.html
+++ b/_includes/blocks/block-application-callout.html
@@ -5,7 +5,8 @@
                 <div class="callout-wrapper">
                     <div class="callout-left">
                         <h2 class="callout-title">Ready to Join Us on a Tour?</h2>
-                        <p class="callout-desc">Click the link to fill out an application and one of our staff members will get in touch with you as soon as you complete it! <br>To learn more and read some FAQ's about travelling with AIA, visit our&nbsp;<a href="/opportunities/FAQ">FAQ Page</a></p>
+                        <p class="callout-desc">Click the link to fill out an application and one of our staff members will get in touch with you as soon as you complete it! Questions... See our <a href="/uploads/Online Application Instructions.pdf">Online Application Instructions</a><br />
+                            To learn more about what its like to serve on an AIA project or tour <a href="/uploads/2018 General Recruiting Flyer_Updated Jan 24.pdf">click here</a>.   </p>
                     </div>
                 <!-- End .callout-left -->
                     <div class="callout-right">
