--- a/_includes/base/sports-performance-menu.html
+++ b/_includes/base/sports-performance-menu.html
@@ -37,13 +37,13 @@
 
                 <div class="collapse navbar-collapse" id="main-navbar-container">
                     <ul class="nav navbar-nav">
-                        <li class=""><a href="/">Home</a></li>
-                        <li class=""><a href="/about">About</a></li>
-                        <li class=""><a href="/get-involved/">Get Involved</a></li>
-                        <li class=""><a href="/resources/">Training Table</a></li>
-                        <li class=""><a href="/alumni">Alumni</a></li>
-                        <li class=""><a href="/give">Give</a></li>
-                        <li class=""><a href="/news/">News</a></li>
+                        <li class=""><a href="/sportsperformance/">Home</a></li>
+                        <li class=""><a href="/sportsperformance/about">About</a></li>
+                        <li class=""><a href="/sportsperformance/get-involved/">Get Involved</a></li>
+                        <li class=""><a href="/sportsperformance/resources/">Training Table</a></li>
+                        <li class=""><a href="/sportsperformance/alumni">Alumni</a></li>
+                        <li class=""><a href="/sportsperformance/give">Give</a></li>
+                        <li class=""><a href="/sportsperformance/news/">News</a></li>
                     </ul>
                     
                     <button type="button" class="navbar-btn btn-icon btn-circle navbar-right last  hidden-sm hidden-xs" data-toggle="collapse" data-target="#header-search-form"><i class="fa fa-search"></i></button>
