--- a/_includes/base/head.html
+++ b/_includes/base/head.html
@@ -22,6 +22,18 @@
 
     </script>
     <!-- End Google Analytics -->
+    <style type="text/css">
+        .panel-body h4 {
+            margin-top: 10px;
+        }
+        .panel-body li {
+            list-style: disc;
+            margin-left: 20px; 
+        }
+        .panel-body ul {
+            margin-bottom: 10px;
+        }
+    </style>
 
 
     
