--- a/_layouts/blog-index.html
+++ b/_layouts/blog-index.html
@@ -59,6 +59,10 @@ layout: default
                         {% endfor %}
                         </ul>
                     </div>
+                    <div class="widget">
+                        <a href="https://goaia.org/opportunity/blog/sports-performance/blog/"><img class="img-responsive" src="/uploads/teamblog.png"></a>
+                        <p>Read about our team's adventurers!</p>
+                    </div>
                 </div>
             </div>
         </div>
