--- a/_includes/blocks/block-project-details.html
+++ b/_includes/blocks/block-project-details.html
@@ -17,7 +17,7 @@
         </div><!-- End .panel-heading -->
         <div id="collapse{{section.order}}{{forloop.index}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{section.order}}{{forloop.index}}">
         <div class="panel-body">
-        <img class="col-md-4 pull-right" src="{{opp.featured_image}}" /> {{opp.description | markdownify }}
+        <img class="col-md-4 img-responsive pull-right" src="{{opp.featured_image}}" /> {{opp.description | markdownify }}
         </div><!-- End .panel-body -->
         </div><!-- End .panel-collapse -->
         </div><!-- End .panel -->
