--- a/_includes/blocks/block-text-with-right-image.html
+++ b/_includes/blocks/block-text-with-right-image.html
@@ -1,5 +1,9 @@
 <div class="max-width">
     <div class="container mt20">
-        <img class="col-md-4 pull-right" src="{{ section.image }}" />{{ section.text | markdownify }}
+        <div class="row">
+            <div class="col-md-12">
+                    <img class="pull-right img-responsive col-md-4" src="{{ section.image }}" /> {{ section.text | markdownify }}
+            </div> 
+        </div>
     </div>
 </div>
