opportunities call-out

--- a/_includes/blocks/block-image-callout.html
+++ b/_includes/blocks/block-image-callout.html
@@ -11,7 +11,7 @@
                     <p class="text-white">{{ section.byLine }}</p>
                     {% if section.url != nil %}
                     <div class="callout-action">
-                        <a href="{{section.url}}" class="btn btn-custom3 btn-border radius-lger min-width">{{section.linkText}}</a>
+                        <a href="{{section.url}}" class="btn btn-custom radius-lger min-width">{{section.linkText}}</a>
                     </div>
                     {% endif %}
                 </header>
