--- a/_includes/plugins/revslider.html
+++ b/_includes/plugins/revslider.html
@@ -32,7 +32,7 @@
                                 data-endspeed="800"
                                 style="z-index: 14">
                                 <a href="{{ include.url1 }}" class="btn btn-white radius-lger min-width"><strong>Read the Post</strong></a>
-                                <a href="/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
+                                <a href="/sportsperformance/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
                             </div>
 
 
@@ -78,7 +78,7 @@
                                 data-endspeed="800"
                                 style="z-index: 14">
                                 <a href="{{ include.url2 }}" class="btn btn-white radius-lger min-width"><strong>Read the Post</strong></a>
-                                <a href="/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
+                                <a href="/sportsperformance/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
                             </div>
 
                         <div class="tp-caption rev-text lfb ltt"
@@ -124,7 +124,7 @@
                                 data-endspeed="800"
                                 style="z-index: 14">
                                 <a href="{{ include.url3 }}" class="btn btn-white radius-lger min-width"><strong>Read the Post</strong></a>
-                                <a href="/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
+                                <a href="/sportsperformance/news" class="btn btn-white btn-border radius-lger min-width"><strong>See More News!</strong></a>
                             </div>
 
 
