--- a/_layouts/blog-page.html
+++ b/_layouts/blog-page.html
@@ -7,7 +7,8 @@ layout: default
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1><a style="color: #bebebe;" href="{{collection.permalink | remove: ":collection/:year/:path" | append: collection.label }}" >Sports Performance News</a></h1>
+                    <h1><a style="color: #bebebe;" href="{{collection.permalink | remove: ":collection/:year/:path" | append: collection.label }}">Sports
+                            Performance News</a></h1>
                 </div>
                 <div class="col-md-6">
                     <ol class="breadcrumb">
@@ -21,26 +22,40 @@ layout: default
         <div class="container mt20">
             <div class="row">
                 <div class="col-md-8">
-                    {% include plugins/blog-post.html date=page.date title=page.title url=page.url content=page.content %}
+                    {% include plugins/blog-post.html date=page.date title=page.title url=page.url content=page.content
+                    %}
                 </div>
                 <div class="col-md-4 sidebar">
                     <div class="widget">
                         <h3>Recent Posts</h3>
                         <ul class="links">
-                        {% assign posts = site.posts | reverse %}
+                            {% assign posts = site.posts | reverse %}
                             {% for post in posts limit: 5 %}
                             {% if post.url contains "index" %}
                             {% else %}
-                                <li><a href="{{post.url}}">{{ post.title }}</a></li>
+                            <li><a href="{{post.url}}">{{ post.title }}</a></li>
                             {% endif %}
-                        {% endfor %}
+                            {% endfor %}
                         </ul>
                     </div>
+                    {% if site.devos.size > 0 %}
+                    <div class="widget">
+                        <h3>Recent Devotionals</h3>
+                        <ul class="links">
+                            {% for post in site.devos limit: 5 %}
+                            {% if post.url contains "index" %}
+                            {% else %}
+                            <li><a href="{{post.url}}">{{ post.title }}</a></li>
+                            {% endif %}
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
-</div> 
+</div>
 <script type="text/javascript">
     $('.entry img').css("width", "100%");
 </script>
