--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,10 @@
 
     {{ content }}
     {% include base/footer.html %}
-    <script src="/js/main.js" type="text/javascript"></script>
     <script type="text/javascript">
+        console.log("TEST");
         if ($("#testimonial-slider").length) {
+            console.log("TEST");
             $("#testimonial-slider").owlCarousel({
                 paginationSpeed: 1000,
                 items: 1,
