--- a/_includes/base/head.html
+++ b/_includes/base/head.html
@@ -10,6 +10,12 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link href="/images/FavIconaia.png" rel="shortcut icon" type="image/x-icon" />
+    <meta property="og:title" content="{{page.title}}">
+    {% if page.social_image and page.social != nil and page.social != '' %}
+    <meta property="og:image" content="https://goaia.org{{page.social_image}}">
+    {% else %}
+    <meta property="og:image" content="https://ik.imagekit.io/athletesinaction/images/Others/tr:ot-{{page.title | replace: " ", "%20" }},ots-60,oy-325,ott-b,ox-N50,otc-FFFFFF/goaia-social.jpg">
+    {% endif %}
     <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
