fix issssue with image height

--- a/_includes/base/head.html
+++ b/_includes/base/head.html
@@ -57,6 +57,11 @@
                 background-size: contain !important;
             }
         }
+        @media (min-width: 1200px) {
+            .service-content img {
+                max-height: 150px;
+            }
+        }
     </style>
 
 
